sample data html file

--- a/flask/templates/dashboard.html
+++ b/flask/templates/dashboard.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Local Dashboard</title>
+    <title>Sample Data Dashboard</title>
   </head>
   <body>
-    <h1>Local Dashboard</h1>
+    <h1>Sample Data Dashboard</h1>
     <p>Temperature: <span id="temperature">0</span> &#8451;</p>
     <p>Humidity: <span id="humidity">0</span>%</p>
     <p>Pressure: <span id="pressure">0</span> hPa</p>
